Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80352

Regression: Proprietary codecs do no longer work on macOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.0
    • 5.14.0 Beta3
    • WebEngine
    • None
    • macOS
    • 38b35fbe4afd9c5476b067dd66684dba7ac948f2 (qt/qtwebengine/5.14.0)

      The proprietary codecs are used in many streaming services and other popular web platforms such as Netflix or Twitter.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes