[macOS] Update widevine search paths to new Chrome bundle layout

Re-enables using proprietary codecs used by many popular platforms
for streaming video.

Fixes: QTBUG-80352
Change-Id: Id1730576a98cfc4b23b523e61c1d8168414e3a48
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>